Gradle fix